--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
-            ],
+  "src/styles.scss"
+],
             "scripts": []
           },
           "configurations": {
@@ -88,9 +88,9 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.css"
-            ],
+         "styles": [
+  "src/styles.scss"
+],
             "scripts": []
           }
         }
