--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~13.0.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.4.0",
+    "sass": "^1.85.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
